--- a/fase1/index.html
+++ b/fase1/index.html
@@ -16,6 +16,9 @@
     <h3> correo: jjhonel95@hotmail.com </h3>
     <h3> skype: jjhonel95</h3>
     <h6> Telefono: 3114766659</h6>
+    <p>
+        <a href="fase2/design.html">Actividad fase2</a>
+    </p>
 
 </body>
 </html>
