actualizacion de autorr
actualizacion de autor

--- a/fase4/autor.html
+++ b/fase4/autor.html
@@ -13,7 +13,7 @@
     <header>
         <h1>HTML: Etiquetas semanticas listas y enlaces</h1>
     </header>
-    <nav class="menu-area"> 
+    <nav class="menu-area">
         <ul>
             <li><a href="index.html">inicio</a></li>
             <li><a href="">tema</a>
@@ -29,14 +29,18 @@
                 </ul>
             </li>
             <li><a href="autor.html">autor</a></li>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/uglT5FMG4qk"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </ul>
     </nav>
     <div class="contenedor">
         <section>
             <article>
-               <iframe width="900" height="600" src="pdf/Autor .pdf" frameborder="0"></iframe>
-            </article>
-       </section>
+                <iframe width="900" height="600" src="pdf/Autor .pdf" frameborder="0"></iframe>
+           </article>
+        </section>
         <aside>
             <iframe
                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPGNCOL%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
